feat: add closeIcon option

--- a/docs/src/content/docs/toast.mdx
+++ b/docs/src/content/docs/toast.mdx
@@ -108,6 +108,7 @@ The `toast.variant` function accepts the following options:
 | `text`          | Notification title                            | `string`                                                                      | ✅       |
 | `description`   | Toast's description                           | `string`                                                                      | -        |
 | `icon`          | Icon to display in the toast                  | `ReactNode`                                                                   | -        |
+| `closeIcon`     | Icon to change Close text                     | `ReactNode`                                                                   | -        |
 | `delayDuration` | Duration before the toast disappears          | `number` (default: `4000`)                                                    | -        |
 | `theme`         | Theme of the toast                            | `Theme` (default: `system`): `light`, `dark` or `system`                      | -        |
 | `action`        | Show a _Action_ button and execute a function | `label` (default text: `action`) & `onClick`: `() => void` or `Promise<void>` | -        |
